# judgy_reachy_no_phone

./: .gitignore  LICENSE  README.md  benchmark_tensorrt.py  check_voices.py  demo.js  index.html  port_hf.js  pyproject.toml  style.css  test_camera.py
.github/workflows/: sync-hf-space.yml
judgy_reachy_no_phone/: animations.py  audio.py  config.py  detection.py  main.py
judgy_reachy_no_phone/static/: index.html  main.js  style.css
